WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87199
REGRESSION: compositing/video/video-poster.html fails on Mac
https://bugs.webkit.org/show_bug.cgi?id=87199
Summary
REGRESSION: compositing/video/video-poster.html fails on Mac
Stephanie Lewis
Reported
2012-05-22 19:59:23 PDT
http://trac.webkit.org/changeset/118087
introduced a regression in compositing/video/video-poster.html. Fails on WK1 and WK2. It looks like the test is timing out.
http://build.webkit.org/results/Lion%20Release%20(Tests)/r118096%20(8565)/results.html
Results: --- /Volumes/Data/slave/lion-intel-release-tests/build/layout-test-results/compositing/video/video-poster-expected.txt +++ /Volumes/Data/slave/lion-intel-release-tests/build/layout-test-results/compositing/video/video-poster-actual.txt @@ -1,13 +1,8 @@ +FAIL: Timed out waiting for notifyDone to be called A <video> should not have a layer until playback begins. This test can not be run manually, it requires layoutTestController.layerTreeAsText. No src, no poster   PASS: wants layers = false, has layers = false -Displaying poster -  PASS: wants layers = false, has layers = false -Displaying movie -  PASS: wants layers = true, has layers = true - -
Attachments
Patch
(2.93 KB, patch)
2012-05-23 16:30 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-05-22 20:00:21 PDT
<
rdar://problem/11511898
>
Stephanie Lewis
Comment 2
2012-05-22 20:08:02 PDT
Added to skipped list
http://trac.webkit.org/changeset/118107
Jer Noble
Comment 3
2012-05-23 16:30:42 PDT
Created
attachment 143672
[details]
Patch
Maciej Stachowiak
Comment 4
2012-05-23 18:04:45 PDT
Comment on
attachment 143672
[details]
Patch r=me
WebKit Review Bot
Comment 5
2012-05-23 19:43:33 PDT
Comment on
attachment 143672
[details]
Patch Clearing flags on attachment: 143672 Committed
r118314
: <
http://trac.webkit.org/changeset/118314
>
WebKit Review Bot
Comment 6
2012-05-23 19:43:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug